tests/neg-custom-args/captures/levels.check
-- Error: tests/neg-custom-args/captures/levels.scala:17:21 ------------------------------------------------------------
17 |  val _ = Ref[String => String]((x: String) => x) // error
   |              ^^^^^^^^^^^^^^^^
   |              Type variable T of constructor Ref cannot be instantiated to box String => String since
   |              that type captures the root capability `cap`.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/levels.scala:22:11 ---------------------------------------
22 |    r.setV(g) // error
   |           ^
   |           Found:    (x: String) ->{cap3} String
   |           Required: (x: String) -> String
   |
   | longer explanation available when compiling with `-explain`
